# mazio_http

./: CMakeLists.txt  main.cpp
include/: ListeningSocket.h
include/http/: HttpMethods.h  HttpRequest.h  HttpResponse.h  Methods.h  Request.h  Response.h
include/server/: HTTPSession.h  ServerHTTP.h
include/socket/: CoreSocket.h  ListeningSocket.h
include/utils/: Utils.h
socket/: CoreSocket.cpp  CoreSocket.h  ListeningSocket.cpp  ListeningSocket.h
src/http/: HttpRequest.cpp  HttpResponse.cpp  Request.cpp  Response.cpp
src/server/: HTTPSession.cpp  ServerHTTP.cpp
src/socket/: CoreSocket.cpp  ListeningSocket.cpp
src/utils/: Utils.cpp  methodToString.cpp  parseQueryString.cpp
